--- a/style.css
+++ b/style.css
@@ -20,3 +20,27 @@
     font-weight: bold;
     text-transform: uppercase;
 }
+
+/* categories area */
+
+.cat1,
+.cat2,
+.cat3 {
+    border-radius: 10px;
+}
+.cat1 {
+    background: orange;
+}
+.cat2 {
+    background: orchid;
+}
+.cat3 {
+    background: blue;
+}
+.cat h1{
+    color: #fff;
+}
+.cat img{
+    width: 150px;
+    padding: 10px 0;
+}
