--- a/style.css
+++ b/style.css
@@ -51,3 +51,22 @@
     border: none;
     box-shadow: 10px 10px 10px gainsboro;
 }
+
+/* Bag Area */
+
+.card-footer {
+    border: none;
+    background: #fff;
+}
+
+/* contact area */
+
+#contactus {
+    height: 200px;
+}
+
+/* footer area */
+
+footer {
+    text-align: center;
+}
